part1/e11/manifests/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ex11-pong-svc
spec:
  type: ClusterIP
  selector:
    app: ex11p
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ex11-main-svc
spec:
  type: ClusterIP
  selector:
    app: ex11m
  ports:
  - port: 2346
    protocol: TCP
    targetPort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ex11-ingress
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: ex11-main-svc
          servicePort: 2346
      - path: /pingpong
        backend:
          serviceName: ex11-pong-svc
          servicePort: 2345
